--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 
     <section>
         <h1>Section</h1>
-        <p>This is another paragraph</p>
     </section>
 
     <article>
@@ -27,6 +26,8 @@
         <p>This is a third paragraph!</p>
         <p>Here is a fourth one because why not you know?</p>
     </article>
+
+    <footer>Fin</footer>
 
 </body>
 </html>
